Migrates service-registry tests to JUnit5